package model;

import java.time.LocalDate;

public class Escultura extends Obra {
    private String estilo;
    private String material;

    public Escultura(String autor, String periodo, double valor,
                     LocalDate fc, LocalDate fi,
                     String estilo, String material) {
        super(autor, periodo, valor, fc, fi);
        this.estilo = estilo;
        this.material = material;
    }

    public String getEstilo() {
        return estilo;
    }

    public String getMaterial() {
        return material;
    }
    
}
