package model;

import java.time.LocalDate;

public class OtroObjeto extends Obra {

    public OtroObjeto(String autor, String periodo, double valor,
                      LocalDate fc, LocalDate fi) {
        super(autor, periodo, valor, fc, fi);
    }
}
