package interfaces;

public interface Autenticable {
    boolean login(String usuario, String password);
}
